<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/inicio"

        app:showAsAction="always"
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:iconTint="@color/teal_200"


        />

    <item android:title="@string/secciones"
        app:showAsAction="always"
        android:id="@+id/sections"
        android:icon="@drawable/ic_baseline_amp_stories_24"

        />
    <item
        android:title="@string/buscar"
        app:showAsAction="always"
        android:id="@+id/search_post"
        android:icon="@drawable/ic_baseline_search_24"


        />
    <item
        android:icon="@drawable/ic_baseline_bookmark_border_24"
        android:title="@string/guardado"
         app:showAsAction="ifRoom"
        android:id="@+id/MisSecciones"
        />
    <item

        android:icon="@drawable/ic_baseline_settings_24"

        android:id="@+id/settings"
            app:showAsAction="ifRoom"
            android:title="@string/settings"


        />



</menu>