<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RegistroActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/fondo_nuevos_iconos"
    android:backgroundTint="@color/new_yellow"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/Registrate"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/select_edit"
            android:drawablePadding="2dip"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ciudad"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/ciudad"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/select_edit"
            android:drawablePadding="2dip"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="text"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/correo"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/select_edit"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            />
        <EditText
            android:id="@+id/contra"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/select_edit"
            android:drawablePadding="2dip"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textPassword"

            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button"
            android:text="@string/registro"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>