<?xml version="1.0" encoding="utf-8"?>

 <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_nuevos_iconos"
    android:backgroundTint="@color/new_yellow"
    tools:context=".Activitys.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"

        >
        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logobv2"


            >
        </ImageView>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                />

            <EditText
                android:id="@+id/correo"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/select_edit"
                android:drawablePadding="2dip"
                android:inputType="number"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                />
            <EditText
                android:id="@+id/contra"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="start"
                android:layout_marginBottom="5dp"
                android:background="@drawable/select_edit"
                android:drawablePadding="2dip"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"


                />




        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:text="@string/login"
           android:textColor="@color/white"
            android:textSize="15dp"
            android:id="@+id/btn_log"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >





        </LinearLayout>




        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/account_exists_message"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="14sp"
            android:id="@+id/navigateSignup"
            android:background="@android:color/transparent"
            android:textAllCaps="false"

            >



        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</LinearLayout>
</ScrollView>